# libnbd

./: .cirrus.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  COPYING.LIB  Makefile.am  README  README.md  SECURITY  TODO  common-rules.mk  configure.ac  podwrapper.pl.in  run.in  subdir-rules.mk
bash-completion/: Makefile.am  README  nbdsh
copy/: Makefile.am  copy-block-to-nbd.sh  copy-file-to-file.sh  copy-file-to-nbd.sh  copy-file-to-null.sh  copy-file-to-qcow2-compressed.sh  copy-file-to-qcow2.sh  copy-file-to-sparse-file.sh  copy-nbd-error.sh  copy-nbd-to-block.sh  copy-nbd-to-file.sh  copy-nbd-to-hexdump.sh  copy-nbd-to-nbd.sh  copy-nbd-to-nbd2.sh  copy-nbd-to-null.sh  copy-nbd-to-small-block-error.sh  copy-nbd-to-small-nbd-error.sh  copy-nbd-to-sparse-file.sh  copy-nbd-to-stdout.sh  copy-progress-bar.sh  copy-sparse-allocated.sh  copy-sparse-no-extents.sh  copy-sparse-request-size.sh  copy-sparse-to-stream.sh  copy-sparse.sh  copy-stdin-to-nbd.sh  copy-stdin-to-null.sh  copy-tls.sh  copy-zero-to-nbd.sh  copy-zero-to-null.sh  file-ops.c  main.c  multi-thread-copying.c  nbd-ops.c  nbdcopy.c  nbdcopy.h  nbdcopy.pod  null-ops.c  pipe-ops.c  progress.c  (+5 more)
docs/: .gitignore  Makefile.am  Makefile.inc  libnbd-release-notes-1.10.pod  libnbd-release-notes-1.12.pod  libnbd-release-notes-1.14.pod  libnbd-release-notes-1.2.pod  libnbd-release-notes-1.4.pod  libnbd-release-notes-1.6.pod  libnbd-release-notes-1.8.pod  libnbd-security.pod  libnbd.pod  nbd_create.pod  nbd_get_errno.3
dump/: Makefile.am  dump-data.sh  dump-empty-qcow2.sh  dump-pattern.sh  dump.c  nbddump.pod  test-long-options.sh  test-short-options.sh  test-version.sh
examples/: LICENSE-FOR-EXAMPLES  Makefile.am  aio-connect-read.c  batched-read-write.c  connect-command.c  copy-libev.c  encryption.c  fetch-first-sector.c  get-size.c  glib-main-loop.c  list-exports.c  open-qcow2.c  reads-and-writes.c  server-flags.c  simple-fetch-first-sector.c  simple-reads-and-writes.c  strict-structured-reads.c  threaded-reads-and-writes.c
fuse/: Makefile.am  nbdfuse.c  nbdfuse.h  nbdfuse.pod  operations.c  test-errors.sh  test-file-mode.sh  test-long-options.sh  test-nbdkit-command.sh  test-nbdkit-file-null.sh  test-nbdkit.sh  test-parallel.sh  test-pattern.sh  test-qcow2.sh  test-short-options.sh  test-trim.sh  test-unix.sh  test-version.sh  test-zero.sh
fuzzing/: Makefile.am  README  libnbd-fuzz-wrapper.c  libnbd-libfuzzer-test.c
generator/: API.ml  API.mli  C.ml  C.mli  GoLang.ml  GoLang.mli  Makefile.am  OCaml.ml  OCaml.mli  Python.ml  Python.mli  README.state-machine.md  generator  generator.ml  state_machine.ml  state_machine.mli  state_machine_generator.ml  state_machine_generator.mli  states-connect-socket-activation.c  states-connect.c  states-issue-command.c  states-magic.c  states-newstyle-opt-export-name.c  states-newstyle-opt-go.c  states-newstyle-opt-list.c  states-newstyle-opt-meta-context.c  states-newstyle-opt-set-meta-context.c  states-newstyle-opt-starttls.c  states-newstyle-opt-structured-reply.c  states-newstyle.c  states-oldstyle.c  states-reply-simple.c  states-reply-structured.c  states-reply.c  states.c  utils.ml  utils.mli
golang/: .gitignore  Makefile.am  README.md  aio_buffer.go  config-test.go  handle.go  libnbd-golang.pod  libnbd_010_load_test.go  libnbd_020_aio_buffer_test.go  libnbd_100_handle_test.go  libnbd_110_defaults_test.go  libnbd_120_set_non_defaults_test.go  libnbd_200_connect_command_test.go  libnbd_210_opt_abort_test.go  libnbd_220_opt_list_test.go  libnbd_230_opt_info_test.go  libnbd_240_opt_list_meta_test.go  libnbd_245_opt_list_meta_queries_test.go  libnbd_250_opt_set_meta_test.go  libnbd_255_opt_set_meta_queries_test.go  libnbd_300_get_size_test.go  libnbd_400_pread_test.go  libnbd_405_pread_structured_test.go  libnbd_410_pwrite_test.go  libnbd_460_block_status_test.go  libnbd_500_aio_pread_test.go  libnbd_510_aio_pwrite_test.go  libnbd_590_aio_copy_test.go  libnbd_600_debug_callback_test.go  libnbd_610_error_test.go  libnbd_620_stats.go  libnbd_620_stats_test.go  make-dist.sh  run-tests.sh
info/: Makefile.am  can.c  info-atomic-output.sh  info-can-connect.sh  info-can-read.sh  info-can-zero.sh  info-can.sh  info-cmd-json.sh  info-cmd-map-totals.sh  info-cmd-size.sh  info-description-qemu.sh  info-description.sh  info-is-read-only.sh  info-json.sh  info-list-json-qemu.sh  info-list-json.sh  info-list-qemu.sh  info-list-uris.sh  info-list.sh  info-map-base-allocation-json.sh  info-map-base-allocation-large.sh  info-map-base-allocation-weird.sh  info-map-base-allocation-zero.sh  info-map-base-allocation.sh  info-map-qemu-allocation-depth.sh  info-map-qemu-dirty-bitmap.sh  info-map-totals-json.sh  info-map-totals.sh  info-null.sh  info-oldstyle.sh  info-packets.sh  info-size.sh  info-text.sh  info-uri-nbds.sh  info-uri.sh  list.c  main.c  map.c  nbdinfo.c  nbdinfo.h  (+7 more)
interop/: Makefile.am  dirty-bitmap.c  dirty-bitmap.sh  interop-qemu-block-size.sh  interop-qemu-storage-daemon.sh  interop.c  list-exports-nbd-config  list-exports.c  nbd-server-tls.conf.in  socket-activation.c  structured-read.c  structured-read.sh
lib/: Makefile.am  aio.c  connect.c  create.c  crypto.c  debug.c  disconnect.c  errors.c  flags.c  handle.c  internal.h  is-state.c  libnbd.pc.in  nbd-protocol.h  opt.c  poll.c  protocol.c  rw.c  socket.c  test-fork-safe-assert.c  test-fork-safe-assert.sh  test-fork-safe-execvpe.c  test-fork-safe-execvpe.sh  uri.c  utils.c
ocaml/: META.in  Makefile.am  buffer.c  handle.c  helpers.c  libnbd-ocaml.pod  nbd-c.h
python/: .flake8  Makefile.am  handle.c  nbdsh.py  pycodestyle.sh  python-aio-connect-unix.sh  run-python-tests.in  test-aio-connect-unix.sh  utils.c
sh/: Makefile.am  nbdsh.in  nbdsh.pod  test-context.sh  test-error.sh  test-help.sh  test-implicit-handle.sh  test-long-options.sh  test-pattern.sh  test-short-options.sh  test-verbose.sh  test-version.sh
tests/: Makefile.am  aio-connect-port.c  aio-connect.c  aio-parallel-load-tls.sh  aio-parallel-load.c  aio-parallel-load.sh  aio-parallel-tls.sh  aio-parallel.c  aio-parallel.sh  close-null.c  (+82 more)
(+221 files in other folders)
